--- a/index.html
+++ b/index.html
@@ -15,12 +15,29 @@
         <!--Game Box-->
         <div id="gameBox">
             <!--Calculator Box-->
+                <div id="calculatorBox">
             <!--Input Box (Shows what is input)-->
+            <input type="text" id="display" value="0">
             <!--Flex Box Containing Buttons-->
+            <div id="numbersBox">
+                <button class="number" id="btnZero">0</button>
+                <button class="number" id="btnOne">1</button>
+                <button class="number" id="btnTwo">2</button>
+                <button class="number" id="btnThree">3</button>
+                <button class="number" id="btnFour">4</button>
+                <button class="number" id="btnFive">5</button>
+                <button class="number" id="btnSix">6</button>
+                <button class="number" id="btnSeven">7</button>
+                <button class="number" id="btnEight">8</button>
+                <button class="number" id="btnNine">9</button>
+                <button class="altButton" id="btnEqual">=</button>
+            </div>
             <!--Clear Button-->
+            <button class="altButton" id="btnClear">Clear</button>
+            </div>  
         </div>
         <!--Version-->
-        <h5 id="version">Version 0.1 - Coded by Charles Cox</h5>
+        <h5 id="version">Version 0.2 - Coded by Charles Cox</h5>
     </div>
 </body>
 </html>
