--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
                     <input type="text" id="display" value="0">
                     <!--Flex Box Containing Operators-->
                     <div id="operatorsBox">
-                        <button class="operator">+</button>
-                        <button class="operator">-</button>
-                        <button class="operator">x</button>
-                        <button class="operator">/</button>
+                        <button class="operator" onClick="enterOperator('+')">+</button>
+                        <button class="operator" onClick="enterOperator('-')">-</button>
+                        <button class="operator" onClick="enterOperator('x')">x</button>
+                        <button class="operator" onClick="enterOperator('/')">/</button>
                     </div>
                     <!--Flex Box Containing Buttons-->
                     <div id="numbersBox">
-                        <button class="number" id="btnOne">1</button>
-                        <button class="number" id="btnTwo">2</button>
-                        <button class="number" id="btnThree">3</button>
-                        <button class="number" id="btnFour">4</button>
-                        <button class="number" id="btnFive">5</button>
-                        <button class="number" id="btnSix">6</button>
-                        <button class="number" id="btnSeven">7</button>
-                        <button class="number" id="btnEight">8</button>
-                        <button class="number" id="btnNine">9</button>
+                        <button class="number" id="1" onClick="enterNumber('1')">1</button>
+                        <button class="number" id="2" onClick="enterNumber('2')">2</button>
+                        <button class="number" id="3" onClick="enterNumber('3')">3</button>
+                        <button class="number" id="4" onClick="enterNumber('4')">4</button>
+                        <button class="number" id="5" onClick="enterNumber('5')">5</button>
+                        <button class="number" id="6" onClick="enterNumber('6')">6</button>
+                        <button class="number" id="7" onClick="enterNumber('7')">7</button>
+                        <button class="number" id="8" onClick="enterNumber('8')">8</button>
+                        <button class="number" id="9" onClick="enterNumber('9')">9</button>
                     </div>
                     <!--Clear Button-->
                     <div id="optionsBox">
-                        <button class="altButton" id="btnClear">Clear</button>
-                        <button class="altButton" id="btnEqual">=</button>
-                        <button class="altButton" id="btnZero">0</button>
+                        <button class="altButton" id="btnClear" onClick="clearDisplay()">Clear</button>
+                        <button class="altButton" id="=" onClick="calc()">=</button>
+                        <button class="altButton" id="0" onClick="enterNumber('0')">0</button>
                     </div>
                 </div>  
             </div>
